--- a/package.json
+++ b/package.json
@@ -199,20 +199,20 @@
     "ip": "1.1.3",
     "lodash": "4.16.4",
     "minimist": "1.2.0",
-    "react": "15.3.2",
-    "react-dom": "15.3.2",
-    "react-helmet": "3.1.0",
-    "react-intl": "2.1.5",
-    "react-redux": "4.4.5",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-helmet": "^3.3.0",
+    "react-intl": "^2.2.2",
+    "react-redux": "^5.0.1",
     "react-router": "3.0.0",
-    "react-router-redux": "4.0.6",
-    "react-router-scroll": "0.3.3",
+    "react-router-redux": "^4.0.7",
+    "react-router-scroll": "^0.4.1",
     "redux": "3.6.0",
-    "redux-immutable": "3.0.8",
-    "redux-saga": "0.12.0",
+    "redux-immutable": "^3.0.9",
+    "redux-saga": "^0.14.1",
     "reselect": "2.5.4",
     "sanitize.css": "4.1.0",
-    "styled-components": "1.0.3",
+    "styled-components": "^1.2.1",
     "warning": "3.0.0",
     "whatwg-fetch": "1.0.0"
   },
